--- a/books.html
+++ b/books.html
@@ -388,12 +388,12 @@
             </div>
             <!-- /////////////////////////////////// -->
             <div class="row justify-content-center">
-                <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-11">
-                    <ul class="nav nav-pills mb-5 justify-content-between" id="pills-tab" role="tablist">
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
-                                data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
-                                aria-selected="true">Home</button>
+                <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-8">
+                    <ul class="nav nav-pills mb-5 justify-content-center" id="pills-tab" role="tablist">
+                        <li class="nav-item all-button" role="presentation">
+                            <button class="nav-link active" id="pills-all-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-all" type="button" role="tab" aria-controls="pills-all"
+                                aria-selected="false">All</button>
                         </li>
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
@@ -405,6 +405,7 @@
                                 data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
                                 aria-selected="false">Contact</button>
                         </li>
+                        <li class="nav-item" role="presentation">
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" id="pills-Writing-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-Writing" type="button" role="tab" aria-controls="pills-Writing"
@@ -420,17 +421,11 @@
                                 data-bs-target="#pills-Marketing" type="button" role="tab"
                                 aria-controls="pills-Marketing" aria-selected="false">Marketing</button>
                         </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link" id="pills-allbuttons-tab" data-bs-toggle="pill"
-                                data-bs-target="#pills-allbuttons" type="button" role="tab"
-                                aria-controls="pills-allbuttons" aria-selected="false">Allbuttons</button>
-                        </li>
                     </ul>
                 </div>
             </div>
-
             <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div class="tab-pane fade show active" id="pills-all" role="tabpanel" aria-labelledby="pills-all-tab">
                     <div class="row justify-content-center">
                         <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                             <div class="single-team">
@@ -438,7 +433,67 @@
                                     <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
                                         alt="Card image cap">
                                     <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers home</h4>
+                                        <h4 class="card-title text-dark">Become A Web Designers Profile</h4>
+                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
+                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
+                                        <a href="details.html" class="btn btn-dark text-white mt-3"
+                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="single-team">
+                                <div class="card text-center">
+                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
+                                        alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title text-dark">Become A Web Designers contact</h4>
+                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
+                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
+                                        <a href="details.html" class="btn btn-dark text-white mt-3"
+                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="single-team">
+                                <div class="card text-center">
+                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
+                                        alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title text-dark">Become A Web Designers Writing</h4>
+                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
+                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
+                                        <a href="details.html" class="btn btn-dark text-white mt-3"
+                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="single-team">
+                                <div class="card text-center">
+                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
+                                        alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title text-dark">Become A Web Designers Coding</h4>
+                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
+                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
+                                        <a href="details.html" class="btn btn-dark text-white mt-3"
+                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="single-team">
+                                <div class="card text-center">
+                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
+                                        alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title text-dark">Become A Web Designers Marketing</h4>
                                         <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
                                             style="border: none; border-radius: 1.25rem;">Buy Now</a>
                                         <a href="details.html" class="btn btn-dark text-white mt-3"
@@ -544,108 +599,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="pills-allbuttons" role="tabpanel" aria-labelledby="pills-allbuttons-tab">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                            <div class="single-team">
-                                <div class="card text-center">
-                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
-                                        alt="Card image cap">
-                                    <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers home</h4>
-                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
-                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
-
-                                        <a href="details.html" class="btn btn-dark text-white mt-3"
-                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                            <div class="single-team">
-                                <div class="card text-center">
-                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
-                                        alt="Card image cap">
-                                    <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers Profile</h4>
-                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
-                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
-                                        <a href="details.html" class="btn btn-dark text-white mt-3"
-                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                            <div class="single-team">
-                                <div class="card text-center">
-                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
-                                        alt="Card image cap">
-                                    <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers contact</h4>
-                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
-                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
-                                        <a href="details.html" class="btn btn-dark text-white mt-3"
-                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                            <div class="single-team">
-                                <div class="card text-center">
-                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
-                                        alt="Card image cap">
-                                    <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers Writing</h4>
-                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
-                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
-                                        <a href="details.html" class="btn btn-dark text-white mt-3"
-                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                            <div class="single-team">
-                                <div class="card text-center">
-                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
-                                        alt="Card image cap">
-                                    <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers Coding</h4>
-                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
-                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
-                                        <a href="details.html" class="btn btn-dark text-white mt-3"
-                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                            <div class="single-team">
-                                <div class="card text-center">
-                                    <img class="card-img-top" src="assets/images/books/Ultimate Guide Ebook Cover.png"
-                                        alt="Card image cap">
-                                    <div class="card-body">
-                                        <h4 class="card-title text-dark">Become A Web Designers Marketing</h4>
-                                        <a href="#" class="btn btn-dark text-white mt-3 bg-danger"
-                                            style="border: none; border-radius: 1.25rem;">Buy Now</a>
-                                        <a href="details.html" class="btn btn-dark text-white mt-3"
-                                            style="border: none; border-radius: 1.25rem; background-color: black;">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-
-
-
-
-
-
 
             <!-- ///////////////////////////////// -->
 
